--- a/code/multi_shrna_screening_ap009.ipynb
+++ b/code/multi_shrna_screening_ap009.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "source": [
     "# Multiplexed shRNA screening AP009 analytics\n",
+    "\n",
+    "Biao Li\n",
+    "\n",
+    "03/17/2025\n",
+    "\n",
     "This notebook includes analysis scripts of processing count table of multiplexed shRNA screening experiments on AP009 cell line received from Cellecta, and evaluating \n",
     "* whether multi-shRNA system works as expected\n",
     "* prognostic effect of genotype X, and\n",
@@ -21,15 +26,11 @@
     "\n",
     "* 0 - separate D18-B (technical replicate of D18-A) from the analysis\n",
     "* 1 - polish up ordering of conditions in plots\n",
-    "* 2 - iterate through analysis by using only R1, or only R2, or both replicates (sum up)\n",
-    "  * currently assuming to perform non-targeting shRNA selection and use all replicates\n",
-    "* 3 - for each target gene, aggregate across multiple shRNAs\n",
+    "* 2 - for each target gene, aggregate across multiple shRNAs\n",
     "  * currently evaluating each shRNA of each target gene separately\n",
-    "* 4 - assess feasibility of 'calculation of tumor burden densities' approach in 2023 NatComm paper\n",
-    "  * currently using ScoreRTN from Li's 2021 CancRes paper, which quantifies on shRNA barcoding count level, while NatComm method requires assessing clonal barcodes\n",
-    "* 5 - spot check QC'ing fastq processing to validate Cellecta's count table\n",
+    "* 3 - spot check QC'ing fastq processing to validate Cellecta's count table\n",
     "  * also inquiring about counts of clonal barcodes\n",
-    " "
+    "* 4 - check correlation between cell counts and plasmid counts of all shRNAs for each of pre-Tx NoDox samples "
    ]
   },
   {
