remove dash app from wrong folder of ./data

--- a/code/multi_shrna_screening_ap009.ipynb
+++ b/code/multi_shrna_screening_ap009.ipynb
@@ -68,6 +68,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e716b4-1386-49e2-8868-76c91d267771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parental_dir = \"/User/Os/...'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cb2cc3ac-6edd-44b9-a9ed-08752752da79",
    "metadata": {},
@@ -236,6 +246,7 @@
    "outputs": [],
    "source": [
     "file_path_count_table = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/Count_Table.csv\"\n",
+    "os.path.join(parent..., '')\n",
     "df_counts = pd.read_csv(file_path_count_table)\n",
     "\n",
     "# Extract columns that start with 'D' plus the 'Gene Symbol / Target Name' column\n",
