cleaned up project directory with path variable

--- a/code/multi_shrna_screening_ap009.ipynb
+++ b/code/multi_shrna_screening_ap009.ipynb
@@ -23,6 +23,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17151274-4d00-4bfa-8cbc-683d7220a680",
+   "metadata": {},
+   "source": [
+    "## Setup path to project directory\n",
+    "This should be absolute path to where project is saved at as a git repo. \n",
+    "\n",
+    "Subfolders of the project directory should be `code`, `data`, `app`, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82a4bf88-f407-4abc-854b-c1b8e4604753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proj_dir = \"~/Documents/Projects/Multi_shRNA_screening_AP009/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6fcd0de8-b453-49b8-b47d-ced2ac3542fb",
    "metadata": {},
    "source": [
@@ -39,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c33d183d-0920-4564-8b5e-5769a0a4d023",
    "metadata": {},
    "outputs": [
@@ -68,16 +89,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1e716b4-1386-49e2-8868-76c91d267771",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parental_dir = \"/User/Os/...'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cb2cc3ac-6edd-44b9-a9ed-08752752da79",
    "metadata": {},
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d58a1a41-4a48-4d80-bfa4-9b7307d8cf33",
    "metadata": {},
    "outputs": [],
@@ -99,6 +110,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "from matplotlib_venn import venn3\n",
     "\n",
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cbfaf28b-f595-4b65-a5eb-4074a73b6b86",
    "metadata": {},
    "outputs": [],
@@ -166,13 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ef4fa4ad-0879-41d4-8a79-97443e3088ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "#### sample description xlsx file\n",
-    "file_path_cellecta = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/sample_description_rectified.xlsx\"\n",
+    "# file_path_cellecta = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/sample_description_rectified.xlsx\"\n",
+    "file_path_cellecta = os.path.join(proj_dir, \"data/sample_description_rectified.xlsx\")\n",
     "\n",
     "df_sd = pd.read_excel(file_path_cellecta, sheet_name='Sheet1')\n",
     "\n",
@@ -194,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "05bce36e-d5b0-4c0d-bd28-e7441aab4550",
    "metadata": {},
    "outputs": [
@@ -240,13 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "97647a62-b639-4df7-99d9-537c405d3fab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path_count_table = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/Count_Table.csv\"\n",
-    "os.path.join(parent..., '')\n",
+    "# file_path_count_table = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/Count_Table.csv\"\n",
+    "file_path_count_table = os.path.join(proj_dir, \"data/Count_Table.csv\")\n",
+    "\n",
     "df_counts = pd.read_csv(file_path_count_table)\n",
     "\n",
     "# Extract columns that start with 'D' plus the 'Gene Symbol / Target Name' column\n",
@@ -285,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9e440ce1-c1d7-45e9-9ed1-b9ecbce50b7e",
    "metadata": {},
    "outputs": [
@@ -643,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a1677dc7-85ba-4f9d-b70f-7901b72afeaf",
    "metadata": {},
    "outputs": [
@@ -784,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5f6b95ec-772f-46c8-9b7d-ef55262693e1",
    "metadata": {},
    "outputs": [],
@@ -794,19 +808,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "71d1c899-3f55-4cce-8ab3-1e0d48c86937",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_full = df_long.merge(df_sd[[\"Sample_ID\", \"Sample_Description\", \"Day_Tx\", \"Tx\", \"Dox\", \"Replicate\"]], \n",
     "                        left_on = \"Sample_ID\", right_on = \"Sample_ID\", how = \"left\")\n",
-    "df_full.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/long_format_joint_count_data.csv\", index = False)"
+    "# df_full.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/long_format_joint_count_data.csv\", index = False)\n",
+    "df_full.to_csv(os.path.join(proj_dir, \"data/long_format_joint_count_data.csv\"), index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8e8f7333-1dc8-4efd-af57-eb3d0c186064",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a307b60c-f508-4dec-9c17-87155d53c13a",
    "metadata": {},
    "outputs": [
@@ -1109,13 +1124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "339a5002-633f-44b7-8a10-d973a047f522",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reload full count table\n",
-    "df_full_path = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/long_format_joint_count_data.csv\"\n",
+    "# df_full_path = \"~/Documents/Projects/Multi_shRNA_screening_AP009/data/long_format_joint_count_data.csv\"\n",
+    "df_full_path = os.path.join(proj_dir, \"data/long_format_joint_count_data.csv\")\n",
+    "\n",
     "df_full = pd.read_csv(df_full_path)\n",
     "\n",
     "# Filter for only NT (Non-Targeting) shRNAs\n",
@@ -1134,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9abc90c0-f942-4e2e-82c0-3c366b103fe7",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "7f1be5e9-5ac0-4135-9750-3ddedffdf754",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "4884e486-db58-4bab-897f-cc7368fda63f",
    "metadata": {},
    "outputs": [],
@@ -1460,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6f8c36eb-57c5-4e83-873b-aeb8573342a8",
    "metadata": {},
    "outputs": [
@@ -1609,12 +1626,13 @@
    ],
    "source": [
     "display(df_nt_variation)\n",
-    "df_nt_variation.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/non_targeting_shrna_variation_table.csv\", index = False)"
+    "# df_nt_variation.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/non_targeting_shrna_variation_table.csv\", index = False)\n",
+    "df_nt_variation.to_csv(os.path.join(proj_dir, \"data/non_targeting_shrna_variation_table.csv\"), index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a181ae58-f650-4a41-bf83-1ece19ededf6",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "8c8e4ec2-462b-4709-8b90-c9b2810430b4",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "f136782b-66f7-400b-bed2-24920adfcea8",
    "metadata": {},
    "outputs": [],
@@ -1846,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "2b24aaab-277b-4967-ac6d-927d16d8566a",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "209146b3-259e-44dd-8ac8-de28e377633d",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2074,8 @@
    "source": [
     "df_selected_nt_boot_median = df_cv_stats[(df_cv_stats[\"Upper_CI\"] < 0.1)]\n",
     "display(df_selected_nt_boot_median)\n",
-    "df_selected_nt_boot_median.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/selected_non_targeting_shRNA_table_median_cv_bootstrapped.csv\", index = False)"
+    "# df_selected_nt_boot_median.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/selected_non_targeting_shRNA_table_median_cv_bootstrapped.csv\", index = False)\n",
+    "df_selected_nt_boot_median.to_csv(os.path.join(proj_dir, \"data/selected_non_targeting_shRNA_table_median_cv_bootstrapped.csv\"), index = False)"
    ]
   },
   {
@@ -2073,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "77ba9d20-1ec4-434d-9adc-b33c379bf7b0",
    "metadata": {},
    "outputs": [],
@@ -2088,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "55f2b6d6-74f7-4577-8e01-cc00883003a7",
    "metadata": {},
    "outputs": [
@@ -2252,7 +2271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "080fc759-81aa-4298-a4ff-5e47f65a3be0",
    "metadata": {},
    "outputs": [
@@ -2280,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "b041cb74-ee33-4e24-8412-ef440d0c232d",
    "metadata": {},
    "outputs": [
@@ -2458,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "18f015ea-8c3b-405f-9053-b37132683c9c",
    "metadata": {},
    "outputs": [
@@ -2946,12 +2965,13 @@
    ],
    "source": [
     "display(df_selected_nt)\n",
-    "df_selected_nt.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/selected_non_targeting_shRNA_table.csv\", index = False)"
+    "# df_selected_nt.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/selected_non_targeting_shRNA_table.csv\", index = False)\n",
+    "df_selected_nt.to_csv(os.path.join(proj_dir, \"data/selected_non_targeting_shRNA_table.csv\"), index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "a15499ee-896f-40d1-8242-a0bf481b29c4",
    "metadata": {},
    "outputs": [
@@ -2992,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "4b683892-8bd1-4635-b737-cd7b372e2d07",
    "metadata": {},
    "outputs": [
@@ -3021,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "8f1976c9-e459-4a15-ac02-4025ed3840ac",
    "metadata": {
     "scrolled": true
@@ -3237,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "46c8899f-71bd-4526-907e-f363c41bf2c4",
    "metadata": {},
    "outputs": [],
@@ -3249,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "debcf282-d5d9-4bea-b7cb-b0042627fc61",
    "metadata": {},
    "outputs": [
@@ -3426,7 +3446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "fe863b98-363f-4647-ad62-f74e173d57fc",
    "metadata": {},
    "outputs": [],
@@ -3449,14 +3469,12 @@
     "df_rtn[\"RTN\"] = df_rtn[\"Read_Counts\"] / df_rtn[\"Read_Counts_NT\"]\n",
     "\n",
     "# Drop the redundant NT read count column\n",
-    "df_rtn = df_rtn.drop(columns=[\"Read_Counts_NT\"])\n",
-    "\n",
-    "df_rtn.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/shrna_target_gene_relative_tumor_number_table.csv\", index = False)"
+    "df_rtn = df_rtn.drop(columns=[\"Read_Counts_NT\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "4b57562c-49e3-4ac7-94bd-6db95f0292b5",
    "metadata": {},
    "outputs": [
@@ -3653,12 +3671,14 @@
     }
    ],
    "source": [
-    "display(df_rtn)"
+    "display(df_rtn)\n",
+    "# df_rtn.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/shrna_target_gene_relative_tumor_number_table.csv\", index = False)\n",
+    "df_rtn.to_csv(os.path.join(proj_dir, \"data/shrna_target_gene_relative_tumor_number_table.csv\"), index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "d596751e-279b-42cb-aaf5-3b4ab5ed74b0",
    "metadata": {},
    "outputs": [
@@ -3687,7 +3707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "b6cec857-4303-41fd-895a-4760d6407e6b",
    "metadata": {},
    "outputs": [],
@@ -3708,7 +3728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "aaf76d1d-697a-4d18-af98-644ebc260cd6",
    "metadata": {},
    "outputs": [],
@@ -3731,7 +3751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "556e6f2d-6524-4ea8-a371-56999695b152",
    "metadata": {},
    "outputs": [
@@ -3884,7 +3904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "4f374619-4a27-4ea1-adae-bbeeddb43955",
    "metadata": {},
    "outputs": [],
@@ -3910,7 +3930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "5558febf-e276-46b1-a3f7-be7cf1adb5f5",
    "metadata": {
     "scrolled": true
@@ -3968,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "54b9f8c7-d6c7-4430-bf59-44fe24c34725",
    "metadata": {},
    "outputs": [
@@ -4158,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "7894bc36-ea14-45c6-a1d9-81939757ddf9",
    "metadata": {},
    "outputs": [
@@ -4235,6 +4255,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9f7cd253-b945-42ec-a85a-4bd01552426f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_prognostic.to_csv(os.path.join(proj_dir, \"data/prognostic_effect.csv\"), index = False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a8223a2a-4738-4e6f-be7c-17817f42b927",
    "metadata": {},
@@ -4248,7 +4278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "24735ed8-b5c8-45be-a151-9544cb5c5062",
    "metadata": {},
    "outputs": [
@@ -4277,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "9300da31-7928-48fd-8317-af5765d5926b",
    "metadata": {},
    "outputs": [],
@@ -4319,7 +4349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "88722b5d-8aff-4d19-8338-39cd003f0ac7",
    "metadata": {},
    "outputs": [
@@ -4509,7 +4539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "5e81c889-ce65-4688-af25-2c319dda4632",
    "metadata": {},
    "outputs": [
@@ -4550,9 +4580,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "4aec360b-b819-4a08-be61-08f77f685302",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4610,12 +4642,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "1d02f95f-9acb-44a8-88d9-5e79994b3cfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_predictive_effect.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/predictive_effect.csv\", index = False)"
+    "# df_predictive_effect.to_csv(\"~/Documents/Projects/Multi_shRNA_screening_AP009/data/predictive_effect.csv\", index = False)\n",
+    "df_predictive_effect.to_csv(os.path.join(proj_dir, \"data/predictive_effect.csv\"), index = False)"
    ]
   }
  ],
